vlib/v/checker/tests/comptime_field_selector_not_in_for_err.out
vlib/v/checker/tests/comptime_field_selector_not_in_for_err.vv:9:5: error: compile time field access can only be used when iterating over `T.fields`
    7 |     mut t := T{}
    8 |     name := 'test'
    9 |     t.$name = '3'
      |        ~~~~
   10 | }
   11 |